fixed project tile style, added rounded corners and cut off images

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,20 +24,25 @@ p {
 
 .projects {
     margin: auto;
-    width: 75%;
-    
+    width: 75%;    
 }
 
 div.project {
     width: 80%;
+    height: 100%;
     background-color: white;
+    margin: 50px;
+    border-radius: 25px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.img {
+img {
     width: 100%;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    height: auto;
-	
+    border-radius: 25px 25px 0 0;
+}
+
+.crop {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
 }
